dependencies/argo-rollouts/patches/traefik-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: rollouts-prefix
spec:
  stripPrefix:
    prefixes:
      - /rollouts/
