dependencies/argo-rollouts/patches/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollouts-ingress
  annotations:
    # ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/app-root: /rollouts
    traefik.ingress.kubernetes.io/router.entrypoints: web
    # traefik.ingress.kubernetes.io/router.middlewares: argo-rollouts-prefix-middleware@kubernetescrd
spec:
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - backend:
              service:
                name: argo-rollouts-dashboard
                port:
                  name: dashboard
            path: /
            pathType: Prefix
